Reduce FileLocator codesmell
08.10.2024

- change: replace URL with URI in FileLocator
- change: change loading ZipEntry in getFileFromZip in FileLocator